// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> head column highlight prop should display asc/desc symbol 1`] = `
<div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 64px; pointer-events: none;"
  />
  <div
    class="card p-0 rounded"
  >
    <div
      class="bg-primary custom-scrollbar text-onPrimary overflow-auto text-2xl shadow transition-colors rounded-t px-6 py-4"
    >
      <span
        class="text-tsm block font-light"
      />
    </div>
    <div
      class="px-6 py-4"
    >
      <table
        class="invisible-caption ml-[-3px] border-collapse"
        style="width: calc(100% + 3px);"
      >
        <thead>
          <tr
            class="styled-link after:bg-separator relative after:absolute after:top-full after:left-0 after:h-[1px] after:w-full after:opacity-30 last:after:content-none"
          >
            <th
              class="text-tsm text-onSurface pb-1.5 font-bold before:relative before:top-[-1px] before:left-[-3px] before:content-['▾']"
            >
              #
            </th>
            <th
              class="text-tsm text-onSurface pb-1.5 font-bold"
            >
              Nickname
            </th>
          </tr>
        </thead>
      </table>
    </div>
  </div>
</div>
`;

exports[`<Table /> head column highlight prop should display asc/desc symbol 2`] = `
<div>
  <div
    style="position: fixed; z-index: 9999; top: 16px; left: 16px; right: 16px; bottom: 64px; pointer-events: none;"
  />
  <div
    class="card p-0 rounded"
  >
    <div
      class="bg-primary custom-scrollbar text-onPrimary overflow-auto text-2xl shadow transition-colors rounded-t px-6 py-4"
    >
      <span
        class="text-tsm block font-light"
      />
    </div>
    <div
      class="px-6 py-4"
    >
      <table
        class="invisible-caption ml-[-3px] border-collapse"
        style="width: calc(100% + 3px);"
      >
        <thead>
          <tr
            class="styled-link after:bg-separator relative after:absolute after:top-full after:left-0 after:h-[1px] after:w-full after:opacity-30 last:after:content-none"
          >
            <th
              class="text-tsm text-onSurface pb-1.5 font-bold before:relative before:top-[-1px] before:left-[-3px] before:content-['▴']"
            >
              #
            </th>
            <th
              class="text-tsm text-onSurface pb-1.5 font-bold"
            >
              Nickname
            </th>
          </tr>
        </thead>
      </table>
    </div>
  </div>
</div>
`;
